--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,16 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 
@@ -28,6 +38,10 @@
 
 .mainFont {
     font-family: "Network";
+}
+
+.mainContent {
+    z-index: 2;
 }
 
 /* Custom cursor */
