--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+#projects {
+    overflow-x: hidden;
+}
+
 /* Import fonts */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
