--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,14 @@
     filter: drop-shadow(15px 13px 49px var(--grey));
 }
 
+.particles-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
 
 /* Container for preloader */
 .preloader-container {
