--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 7em;
+    font-size: 7rem;
     font-weight: 600;
     color: #000;
     text-transform: uppercase;
@@ -117,7 +117,7 @@
 /* Define the initial styles for the header tag */
 #homeName {
     font-family: "Network";
-    font-size: 18em;
+    font-size: 18rem;
     font-weight: 50;
     letter-spacing: 0.2em;
     margin-bottom: 3vh;
@@ -127,7 +127,7 @@
 #homeAbout {
     font-family: "Chakra Petch";
     margin-left: 33vw;
-    font-size: 1.2em;
+    font-size: 1.2rem;
     font-weight: 400;
     letter-spacing: 0.1em;
     color: black;
@@ -142,16 +142,16 @@
     /* Spacing between letters */
     letter-spacing: 0.5em;
     font-family: "Chakra Petch";
-    font-size: 1.5em;
+    font-size: 1.5rem;
     text-transform: uppercase;
 }
 
 
 #aboutMeText {
-    font-size: 2em;
+    font-size: 2rem;
     color: black;
     min-width: 80vw;
-    margin: .5em;
+    margin: .5rem;
 }
 
 /* Grafitti spray */
@@ -172,13 +172,13 @@
 }
 
 #navPic {
-    padding-left: 3em;
+    padding-left: 3rem;
 }
 
 .navbar-brand {
     text-transform: uppercase;
     font-weight: 800;
-    font-size: 1em;
+    font-size: 1rem;
 }
 
 nav {
@@ -193,18 +193,18 @@ nav {
 
 a#roles.navbar-brand {
     background: transparent;
-    font-size: 1em;
-    padding: .5em;
+    font-size: 1rem;
+    padding: .5rem;
     color: black;
 }
 
 #social-links {
-    margin-right: 3em;
-    margin-left: 1.5em;
+    margin-right: 3rem;
+    margin-left: 1.5rem;
 }
 
 .social-icon {
-    width: 2.2em;
+    width: 2.2rem;
     height: auto;
 }
 
@@ -217,12 +217,12 @@ a#roles.navbar-brand {
     }
 
     .preloader-text {
-        font-size: 5em;
+        font-size: 5rem;
         margin-top: 5vh;
     }
 
     .social-icon {
-        width: 2em;
+        width: 2rem;
         height: auto;
     }
 
@@ -233,7 +233,7 @@ a#roles.navbar-brand {
         }
 
         .preloader-text {
-            font-size: 6em;
+            font-size: 6rem;
             margin-top: 5vh;
         }
 
@@ -244,7 +244,7 @@ a#roles.navbar-brand {
             }
 
             .preloader-text {
-                font-size: 5em;
+                font-size: 5rem;
                 margin-top: 2vh;
             }
         }
@@ -258,7 +258,7 @@ a#roles.navbar-brand {
     }
 
     .preloader-text {
-        font-size: 9em;
+        font-size: 9rem;
         margin-top: 7vh;
     }
 }
@@ -266,14 +266,14 @@ a#roles.navbar-brand {
 /* Mobile styles for screens with width up to 1080px */
 @media (max-width: 1080px) {
     #homeName {
-        font-size: 10em;
+        font-size: 10rem;
         margin-top: 3vh;
         margin-left: 2vw;
     }
 
     #homeAbout {
         margin-left: 10vw;
-        font-size: 1.5em;
+        font-size: 1.5rem;
         min-width: 80vw;
         max-width: 90vw;
     }
@@ -282,7 +282,7 @@ a#roles.navbar-brand {
 /* Tablet Portrait styles for screens with width between 600px and 799px */
 @media (max-width: 799px) and (min-width: 600px) {
     #homeName {
-        font-size: 8.5em;
+        font-size: 8.5rem;
         letter-spacing: 0.1em;
         margin-bottom: 3vh;
         margin-left: 2vw;
@@ -291,8 +291,7 @@ a#roles.navbar-brand {
     #homeAbout {
         margin-left: 2vw;
         margin-right: 3vw;
-        font-size: 1.2em;
-        letter-spacing: 0.05em;
+        font-size: 1.2rem;
         min-width: 85vw;
         max-width: 98vw;
     }
@@ -301,7 +300,7 @@ a#roles.navbar-brand {
 /* Tablet Landscape and Portrait styles for screens with width of 800px and above in portrait orientation */
 @media (min-width: 800px) and (orientation: portrait) {
     #homeName {
-        font-size: 8em;
+        font-size: 8rem;
         letter-spacing: 0.3em;
         margin-bottom: 3vh;
         margin-left: 2vw;
@@ -312,7 +311,7 @@ a#roles.navbar-brand {
         margin-left: 2vw;
         margin-right: 3vw;
         margin-top: 3vh;
-        font-size: 1.5em;
+        font-size: 1.5rem;
         letter-spacing: 0.05em;
         min-width: 75vw;
     }
@@ -321,7 +320,7 @@ a#roles.navbar-brand {
 /* Mobile Landscape styles for screens with width up to 599px */
 @media (max-width: 599px) {
     #homeName {
-        font-size: 6em;
+        font-size: 6rem;
         letter-spacing: 0.2em;
         margin-bottom: 3vh;
         margin-left: 1vw;
@@ -332,8 +331,7 @@ a#roles.navbar-brand {
         margin-left: 3vw;
         margin-right: 3vw;
         margin-top: 3vh;
-        font-size: 1.3em;
-        letter-spacing: 0.05em;
+        font-size: 1.3rem;
         min-width: 90vw;
         max-width: 98vw;
     }
@@ -342,7 +340,7 @@ a#roles.navbar-brand {
 /* Mobile Portrait styles for screens with width up to 399px */
 @media (max-width: 399px) {
     #homeName {
-        font-size: 4em;
+        font-size: 4rem;
         letter-spacing: 0.3em;
         margin-bottom: 3vh;
         margin-left: 3vw;
@@ -353,8 +351,7 @@ a#roles.navbar-brand {
         margin-left: 3vw;
         margin-right: 3vw;
         margin-top: 5vh;
-        font-size: 1em;
-        letter-spacing: 0.05em;
+        font-size: 1rem;
         min-width: 90vw;
         max-width: 98vw;
     }
